syntax = "proto3";

// Sonr API
//
// Sonr is a peer-to-peer identity and asset management system that leverages DID documents, Webauthn, and IPFS â€” providing users with a secure, user-friendly way to manage their digital identity and assets.
package sonrhq.common.v1;

option go_package = "github.com/sonrhq/core/pkg/crypto/types";


enum CoinType {
  CoinType_BITCOIN = 0; // 0x80000000
  CoinType_TESTNET = 1; // 0x80000001
  CoinType_LITECOIN = 2; // 0x80000002
  CoinType_DOGE = 3; // 0x80000003
  CoinType_ETHEREUM = 4; // 0x8000003c
  CoinType_SONR = 5; // 0x800002bf
  CoinType_COSMOS = 6; // 0x800002c0
  CoinType_FILECOIN = 7; // 0x800002c1
  CoinType_HNS = 8; // 0x800002c2
}
